@@ -72,6 +72,14 @@ class Gray_Scale(gtk.Frame):
 
         self.grayscale_fig.canvas.draw()
 
+    def get_has_grayscale(self):
+
+        if self._grayscale is None:
+            return False
+
+        else:
+            return True
+
     def set_grayscale(self, im_section, scale_factor=1.0, dpi=600):
 
         if im_section is None:
@@ -90,7 +98,7 @@ class Gray_Scale(gtk.Frame):
 
         if gs._mid_orth_strip is None or gs._grayscale_pos is None:
             self.DMS('GRAYSCALE', 'Gray-scale could not find any signal.', 
-                110, debug_level='info')
+                1110, debug_level='info')
 
             if self.grayscale_plot_img_ax is not None:
                 self.grayscale_plot_img_ax.set_visible(False)
@@ -101,15 +109,22 @@ class Gray_Scale(gtk.Frame):
         Y = np.ones(len(gs._grayscale_pos)) * gs._mid_orth_strip 
         #grayscale_plot = self.grayscale_fig.get_subplot(121)
         #self.grayscale_plot_img.clear()
-        if self.grayscale_plot_img_ax is None:
-            self.grayscale_plot_img_ax = self.grayscale_plot_img.imshow(\
-                im_section.T, cmap=plt.cm.gray)
-            self.grayscale_plot_img_ax2 = self.grayscale_plot_img.plot(\
-                gs._grayscale_pos, Y,'ko', mfc='w', mew=1, ms=3)[0]
-        else:
-            self.grayscale_plot_img_ax.set_data(im_section.T)
-            self.grayscale_plot_img_ax2.set_xdata(gs._grayscale_pos)
-            self.grayscale_plot_img_ax2.set_ydata(Y)
+        #if self.grayscale_plot_img_ax is None:
+        self.grayscale_plot_img.cla()
+        self.grayscale_plot_img_ax = self.grayscale_plot_img.imshow(\
+            im_section.T, cmap=plt.cm.gray)
+        self.grayscale_plot_img_ax2 = self.grayscale_plot_img.plot(\
+            gs._grayscale_pos, Y,'o', mfc='r', mew=1, ms=3)[0]
+        self.grayscale_plot_img.plot(gs._gray_scale_pos, 
+            np.ones(len(gs._gray_scale_pos))*gs._mid_orth_strip - gs.ortho_half_height ,
+            'r-' )
+        self.grayscale_plot_img.plot(gs._gray_scale_pos, 
+            np.ones(len(gs._gray_scale_pos))*gs._mid_orth_strip + gs.ortho_half_height,
+            'r-' )
+        #else:
+            #self.grayscale_plot_img_ax.set_data(im_section.T)
+            #self.grayscale_plot_img_ax2.set_xdata(gs._grayscale_pos)
+            #self.grayscale_plot_img_ax2.set_ydata(Y)
 
         self.grayscale_plot_img.set_xlim(xmin=0,xmax=im_section.shape[0])
         self.grayscale_plot_img_ax.set_visible(True)
@@ -117,35 +132,39 @@ class Gray_Scale(gtk.Frame):
 
         #RIGHT PLOT
         #grayscale_plot = self.grayscale_fig.get_subplot(122)
-
-        if len(gs._grayscale_X) != len(gs._grayscale):
+        kodak_values = gs.get_kodak_values()
+        if len(kodak_values) != len(gs._grayscale):
             self._grayscale=None
             self.DMS("GRAYSCALE GUI", 
                 "There's something wrong with the grayscale. Try manual selection",
-                110, debug_level="error")
+                1110, debug_level="error")
             return False
 
         #z2 = np.polyfit(gs._grayscale_X, gs._grayscale,2)
         #p2 = np.poly1d(z2)
-        z3 = np.polyfit(gs._grayscale_X, gs._grayscale,3)
+        z3 = np.polyfit(kodak_values, gs._grayscale,3)
         p3 = np.poly1d(z3)
 
         if z3 is not None:
 
-            z3_deriv_coeffs = np.array(z3[:3]) * (3,2,1)
 
-            z3_deriv = np.array(map(lambda x: (z3_deriv_coeffs*x).sum(), range(87)))
+            z3_deriv_coeffs = np.array(z3[:-1]) * np.arange(z3.shape[0]-1,0,-1)
+
+            z3_deriv = np.array(map(lambda x: (z3_deriv_coeffs*np.power(x,
+                np.arange(z3_deriv_coeffs.shape[0],0,-1))).sum(), range(87)))
 
             if (z3_deriv > 0).any() and (z3_deriv < 0).any():
 
                 self.DMS('GRAYSCALE GUI', 
                     'Grayscale is dubious since coefficients ({0}) don\'t\
-agree on sign.'.format(z3),
-                    110, debug_level='error')
+ agree on sign.'.format(z3_deriv_coeffs),
+                    1110, debug_level='error')
 
                 self._grayscale=None
                 return False
-
+            else:
+                self.DMS('GRAYSCALE GUI', 'Got regression coeffs: {0}'.format(z3), 110,
+                    debug_level='info')
         else:
 
             self.DMS('GRAYSCALE GUI',
@@ -154,10 +173,10 @@ agree on sign.'.format(z3),
             self._grayscale=None
             return False
 
-        xp = np.linspace(gs._grayscale_X[0], gs._grayscale_X[-1], 100)
+        xp = np.linspace(kodak_values[0], kodak_values[-1], 100)
 
         self.grayscale_plot.clear()
-        line1 = self.grayscale_plot.plot(gs._grayscale_X, gs._grayscale,'bo', mfc='None', mew=1)
+        line1 = self.grayscale_plot.plot(kodak_values, gs._grayscale,'bo', mfc='None', mew=1)
         #line2 = grayscale_plot.plot(xp, p2(xp),'r-')
         line3 = self.grayscale_plot.plot(xp, p3(xp),'g-', lw=2)
 
